@@ -1,11 +1,16 @@
 package spec.concordion.common.command.assertEquals.nonString;
 
+import org.concordion.api.ConcordionFixture;
 import org.concordion.integration.junit4.ConcordionRunner;
 import org.junit.runner.RunWith;
 
 import test.concordion.TestRig;
 
+#if JUNIT_VINTAGE
 @RunWith(ConcordionRunner.class)
+#else
+@ConcordionFixture
+#endif
 public class NonStringTest {
     
     public String outcomeOfPerformingAssertEquals(String fragment, String expectedString, String result, String resultType) {
@@ -14,9 +19,9 @@ public class NonStringTest {
         if (resultType.equals("String")) {
             simulatedResult = result;
         } else if (resultType.equals("Integer")) {
-            simulatedResult = new Integer(result);
+            simulatedResult = Integer.valueOf(result);
         } else if (resultType.equals("Double")) {
-            simulatedResult = new Double(result);
+            simulatedResult = Double.valueOf(result);
         } else {
             throw new RuntimeException("Unsupported result-type '" + resultType + "'.");
         }
